feat(agent): full Java 8 support — OkHttp sender + Java 8 bytecode target
Replace opentelemetry-exporter-sender-jdk (Java 11+) with sender-okhttp
so the agent works on Java 8 JVMs. OkHttp 4.x compiles to Java 8 bytecode.

Changes:
- vertx-otel-core: swap sender-jdk → sender-okhttp, compile with --release 8
- vertx3-rxjava2-otel-autoconfigure: compile main sources with --release 8
  (test sources keep source/target 11 — tests run on Java 17 in CI)
- Root shade config: bundle + relocate okhttp3 → io.last9.internal.okhttp3,
  okio → io.last9.internal.okio, kotlin → io.last9.internal.kotlin to avoid
  conflicts with customers that bundle their own OkHttp (e.g. Retrofit)
- Fix Java 9+ source usages in main code: Set.of() → Collections.unmodifiableSet
  + Arrays.asList(), String.isBlank() → trim().isEmpty(), var → explicit type,
  Map.of() → HashMap, diamond-with-anon-class → explicit type param

Verification (beta.7 JAR):
  TracedRouter.class major version: 52 (Java 8) ✓
  io/last9/internal/bytebuddy/: 2994 classes ✓
  io/last9/internal/okhttp3/: 336 classes ✓
  io/last9/internal/kotlin/: 1000 classes ✓
  Unrelocated okhttp3/okio/kotlin/bytebuddy: 0 ✓

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>